--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "alterphp/easyadmin-extension-bundle": "^2.1",
         "easycorp/easyadmin-bundle": "^2.1",
         "friendsofsymfony/user-bundle": "^2.1",
         "liip/imagine-bundle": "^2.1",
