--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -11,6 +11,13 @@ easy_admin:
         User:
             class: App\Entity\User
             role: ROLE_ADMIN
+            list:
+                fields:
+                    - username
+                    - email
+                    - enabled
+                    - lastLogin
+                    - roles
             form:
                 fields:
                     - username
