--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,6 +1,3 @@
 framework:
     default_locale: 'ru'
-    translator:
-        fallbacks: ['ru']
-        paths:
-            - '%kernel.project_dir%/translations'
+    translator: ~
