--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/web-link": "4.2.*",
         "symfony/webpack-encore-bundle": "^1.6",
         "symfony/yaml": "4.2.*",
+        "tetranz/select2entity-bundle": "^2.9",
         "vich/uploader-bundle": "^1.9",
         "white-october/pagerfanta-bundle": "^1.2"
     },
