--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@dashboardcode/bsmultiselect": "^0.2.22",
         "@symfony/webpack-encore": "^0.27.0",
         "bootstrap": "^4.3.1",
         "core-js": "^3.0.0",
@@ -8,6 +9,8 @@
         "node-sass": "^4.12.0",
         "popper.js": "^1.15.0",
         "sass-loader": "^7.1.0",
+        "select2": "^4.0.7",
+        "select2-bootstrap4-theme": "^1.0.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
