--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,16 +21,17 @@ security:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
                 default_target_path: home
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 2592000
             logout:
                 target: /login
             anonymous: true
+            # https://symfony.com/doc/current/security/impersonating_user.html
             switch_user: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
